# public-files

./: .gitignore
ansible/ansible-learning/ansible-vault/: vault.yaml  vault_test.yaml
ansible/nfs/: credentials.yml
ansible/role-book/: hosts.ini  id_rsa_git.pub  setup-configs.yml  smb-test.yaml  zfs-test.yaml
ansible/server-config-updater/: hosts.ini  main-test.yml  setup-configs.yml
c/DynamicArrayReversal/: CMakeLists.txt
c/Examples/BasicProjectExample/: CMakeLisats.txt  CMakeLists.txt  main.c
c/Examples/CProjectFramework/: CMakeLists.txt  readme.txt
c/Examples/CProjectFramework/src/: functions.c  functions.h  main.c
c/Examples/CProjectFramework/test/: tests.c
c/SumOfArray/: CMakeLists.txt
configs/auditd/: rclone.rules
configs/bash/: .bashrc
configs/c/: CMakeListsBasic.txt  CMakeListsUnity.txt
configs/cron/: cron_bestguy_storage-server  cron_bestguy_storage-server.txt
configs/git/: .gitignore_private  .gitignore_public
configs/nfs/: exports_master  exports_worker  exports_worker_test
configs/rclone/: filter.txt  rclone.conf
configs/smb/: smb.conf(master)  smb.conf(worker)  smbcreds  smbusers
configs/tmux/: .tmux.conf
configs/vim/: .vimrc
docker/server-services/: .env  docker-compose-serviceserver.yml
knowledge-base/: directory_structure.md
python/: keyboard-press.py  likecounter.html
python/file_encryption/: encrypt-file.py  start-web-server.py
scripts/bash/: commit.sh  commit_dynamic.sh  cron_env_setup.sh  cron_wrapper.sh  inotify.sh  molecule-setup.sh  script_setup.sh  system_maintenance.txt  tmux-setup-example.sh
scripts/powershell/: choco-upgrade.ps1  file-sync.ps1  study-workspace.ps1
sh/scripts/: commit.sh
(+146 files in other folders)
